[package]
name = "rsomics-clustering-coefficient"
version = "0.1.0"
description = "Triangle-based clustering metrics for undirected graphs — value-exact networkx equivalent (triangles, local/average clustering, transitivity)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-clustering-coefficient"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["clustering", "graph", "network", "triangles", "bioinformatics"]
readme = "README.md"

[[bin]]
name = "rsomics-clustering-coefficient"
path = "src/main.rs"

[lib]
name = "rsomics_clustering_coefficient"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "clustering"
harness = false
